--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.13",
+    "bootstrap-icons": "^1.13.1",
+    "echarts": "^5.6.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
